add sharing boards, migrate to springboot 3.2.1